--- a/Frontend/src/TeamPoints.css
+++ b/Frontend/src/TeamPoints.css
@@ -1,7 +1,7 @@
-/* .container {
+.container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: top;
   align-items: center;
   height: 100vh;
   background-color: #f2f2f2;
@@ -38,8 +38,22 @@
   color: #fff;
   font-size: 16px;
   cursor: pointer;
-} */
+}
+
+h2 {
+  padding-bottom: 1rem;
+}
+
+.points {
+  padding-bottom: 1rem;
+}
 
 .selected {
   background-color: #ffc107;
+}
+
+.btn {
+  min-width: 70px;
+  margin: 0.3rem;
+  padding: 0.3rem;
 }
